[DEV] Removed depreciated warning.